test: 테스트 코드 리펙터링